[tool.poetry]
name = "ketabche"
version = "0.1.0"
description = ""
authors = ["Arian Hedayati Far <arian.hedayatifar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
